--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -45,7 +45,7 @@
   font-size: 13px;
   letter-spacing: 0.2px;
 }
-@media only screen and (min-width: 500px) {
+@media only screen and (min-width: 768px) {
   .header {
     padding: 20px 0px;
   }
